# ClinchrFT

./: .gitignore  LICENSE  PR_BODY.md  PR_BODY_NODE.md  README.md  allowlist-report.json  audit-after-pin.json  audit-after.json  audit-force.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
agents/: README.md  architect.prompt.md  deployment.prompt.md  qa.prompt.md
docs/: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEV-DB.md  E2E.md  SECURITY.md  api-contracts.md  csv-spec.md  dev-mock.md  learning-artifacts-duplicate-default-account.md  learning-artifacts.md  tauri-runtime-notes.md
public/: index.html
scripts/: check-api-contracts.cjs  tauri-allowlist-checker.cjs  tauri-allowlist-checker.js  validate-tauri-conf.cjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/src/: commands.rs  db.rs  main.rs
tasks/: engineer-ready-patches.md  persist-tauri-allowlist-instruction.md  task-fix-tsc-test-failure.md  todo-accounts-categories-crud.md  todo-csv-import-export.md  todo-filtering-querying.md  todo-run-locally.md  todo-scaffold-spec.md  todo-tauri-allowlist-checker.md  todo-top5-implementations.md  todo-transactions-crud.md  todo-visualizations-dashboard.md
test-results/: .last-run.json
tests/: charts.test.tsx  checker.test.js  export-flow.test.tsx  filters.test.tsx  import-preview.test.tsx  legendToggle.test.tsx  money.test.ts  setupTests.ts  tauri-api.test.ts  tauri-helpers.test.ts  (+4 more)
(+46 files in other folders)
